# my-agent

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  TODO.md  compose.yaml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: agent.py  memory.py  model.py  tools.py
backend/app/database/: session.py
backend/app/models/: thread.py
backend/app/router/: chat.py
backend/app/schema/: base.py  chat.py
backend/app/service/: chat.py
backend/migrations/: env.py
backend/migrations/versions/: 238f236a57ef_create_threads_table.py
backend/scripts/: check_model.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/_componets/: InputContainer.tsx  LeftBar.tsx  MessageContainer.tsx
frontend/app/_componets/_types/: chat.ts
frontend/app/service/: request.ts  stream-chat.ts
